--- a/src/index_works.html
+++ b/src/index_works.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-<link rel="stylesheet" href="style.css">
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
       integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
 <script src="https://code.jquery.com/jquery-3.5.1.min.js" crossorigin="anonymous"></script>
@@ -11,7 +10,41 @@
         crossorigin="anonymous"></script>
 <script src="/socket.io/socket.io.js"></script>
 
-<body class="bg-dark" style="color: white;">
+<style>
+    html, body {
+        margin: 0;
+        height: 100%;
+        min-height: 100%;
+        color: white;
+    }
+
+    body {
+        display: flex;
+        flex-direction: column;
+    }
+
+    header,
+    footer {
+        flex: none;
+    }
+
+    main {
+        overflow-y: scroll;
+        -webkit-overflow-scrolling: touch;
+        flex: auto;
+    }
+
+    .pic {
+        flex: none;
+    }
+
+    #messages {
+        word-wrap: break-word;
+        word-break: break-all;
+    }
+</style>
+
+<body class="bg-dark">
 <header class="row justify-content-center m-1">
     <h1 id="title" class="text-white text-center">Let's chat with people from my favourite movie Titanic</h1>
 </header>
@@ -65,10 +98,19 @@
     const socket = io();  // to receive data from server.js without refreshing the page.
     $(() => {
         $("#send").click(() => {  // send a message
+
+                let newDate = new Date();
+                let date = ("0" + (newDate.getDate() + 1)).slice(-2)
+                let month = ("0" + (newDate.getMonth() + 1)).slice(-2)
+                let year = newDate.getFullYear();
+                let hour = ("0" + (newDate.getHours() + 1)).slice(-2)
+                let minute = ("0" + (newDate.getMinutes() + 1)).slice(-2)
+                let now = month + "-" + date + "-" + year + " " + hour + ":" + minute;
+
                 const message = {
                     name: $("#name").html(),
                     message: $("#message").val(),
-                    // date will be added in server.js
+                    date: now,
                 };
                 postMessage(message);
                 $("#message").val("");  // empty textarea 'message'
@@ -125,4 +167,5 @@
             scrollTop: div.scrollHeight - div.clientHeight
         }, 500);
     }
+
 </script>
