--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,11 @@
 <!DOCTYPE html>
+<script type="text/javascript"
+        src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script> <!--to use jQuery for messages.js-->
+<script type="text/javascript" src="messages.js"></script>
+
 <link rel="stylesheet" href="style.css">
+
+<!--bootstrap begins-->
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
       integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
 <script src="https://code.jquery.com/jquery-3.5.1.min.js" crossorigin="anonymous"></script>
@@ -9,8 +15,25 @@
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
         integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
         crossorigin="anonymous"></script>
+<!--bootstrap ends-->
+
 <script src="/socket.io/socket.io.js"></script>
 
+<script>  // for socket only. The rest javascript is in messages.js
+    const socket = io();  // to receive data from server.js without refreshing the page.
+
+    socket.on('message', (newMgs) => {  // when get a new message from 'server.js', it add messages and scroll down to the bottom
+        addMessages(newMgs);
+        scrollSmoothToBottom('main');
+    })
+
+    socket.on('refreshScreen', () => {
+        $("#messages").html(""); // clear the preload messages before displaying default messages
+        getMessages();
+    })
+</script>
+
+<html>
 <body class="bg-dark" style="color: white;">
 <header class="row justify-content-center m-1">
     <h1 id="title" class="text-white text-center">Let's chat with people from my favourite movie Titanic</h1>
@@ -20,13 +43,13 @@
         <div id="messages" class="row"></div>
     </div>
 </main>
-<footer class="row bg-secondary align-items-center p-2 m-1">
-    <div class="dropdown" id="myDropdown">
-        <button class="btn btn-secondary dropdown-toggle bg-dark" type="button" id="name" data-toggle="dropdown"
+<footer class="row bg-secondary align-items-center p-2 m-1" id="footer">
+    <div class="dropdown">
+        <button class="btn btn-secondary dropdown-toggle bg-dark" id="name" type="button" data-toggle="dropdown"
                 aria-haspopup="true" aria-expanded="false">
             NAME
         </button>
-        <div class="dropdown-menu bg-dark text-white" aria-labelledby="name">
+        <div class="dropdown-menu bg-dark text-white" aria-labelledby="name" id="names">
             <a class="dropdown-item">JACK</a>
             <a class="dropdown-item">ROSE</a>
             <a class="dropdown-item">CAL</a>
@@ -60,69 +83,4 @@
     </button>
 </footer>
 </body>
-
-<script>
-    const socket = io();  // to receive data from server.js without refreshing the page.
-    $(() => {
-        $("#send").click(() => {  // send a message
-                const message = {
-                    name: $("#name").html(),
-                    message: $("#message").val(),
-                    // date will be added in server.js
-                };
-                postMessage(message);
-                $("#message").val("");  // empty textarea 'message'
-        })
-
-        $("#reset").click(() => {  // reset DB
-            let resetDB = confirm("Your comments are saved in online database server permanently, so if you want to reset the chatting then press the 'RESET' button.");
-            if (resetDB) {
-                $.post('http://localhost:3000/reset')
-            }
-        })
-
-        $(".dropdown-menu a").click(function () {
-            $(this).parents(".dropdown").find('.btn').html($(this).text());
-            $(this).parents(".dropdown").find('.btn').val($(this).data('value'));
-        });
-
-        $(document).ready(function() {
-            $(".dropdown .dropdown-menu a")[0].click();
-        });
-        getMessages();
-    })
-
-    socket.on('message', (newMgs) => {
-        addMessages(newMgs);
-        scrollSmoothToBottom('main');
-    })
-    socket.on('refresh', () => {
-        $("#messages").html(""); // clear the preload messages before displaying default messages
-        getMessages();
-    })
-
-    const addMessages = (message) => {
-        let profile = "photo/" + message.name + ".png";
-        $("#messages").append(
-            `<div class="pic m-1"><img src=${profile} class="img-thumbnail rounded-circle" style="max-height: 80px; max-width: 80px"></div><div class="col m-1"><p class="row"><strong class="font-weight-bold h5">${message.name}</strong> <span class="text-muted small">${message.date}</span></p> <p class="row">${message.message}</p></div><div class="w-100"></div>`)
-    }
-
-    const getMessages = () => {
-        $.get('http://localhost:3000/messages', (data) => {
-                data.forEach(addMessages);
-                scrollSmoothToBottom('main')
-            }
-        )
-    }
-
-    const postMessage = (message) => {
-        $.post('http://localhost:3000/messages', message)
-    }
-
-    const scrollSmoothToBottom = (id) => {
-        const div = document.getElementById(id);
-        $('#' + id).animate({
-            scrollTop: div.scrollHeight - div.clientHeight
-        }, 500);
-    }
-</script>
+</html>
