--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <script type="text/javascript"
         src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script> <!--to use jQuery for messages.js-->
-<script type="text/javascript" src="messages.js"></script>
+<script type="text/javascript" src="./messages.js"></script>
 
 <link rel="stylesheet" href="style.css">
 
