--- a/src/index.html
+++ b/src/index.html
@@ -39,108 +39,89 @@ socket.on('refreshScreen', () => {
 <body class="bg-dark" style="color: white;">
 <header class="justify-content-center m-1 ">
     <div class="_container">
-        <h3 id="title" class="item item-grow text-center">Chat with people from Titanic
-            Titanic</h3>
+        <h3 id="title" class="item item-grow text-center">Chat with Titanic</h3>
         <div class="item btn-group dropleft">
-            <button type="button" class="btn bg-primary text-white dropdown-toggle" data-toggle="dropdown" aria-haspopup="true"
+            <button type="button" class="btn bg-primary text-white dropdown-toggle" data-toggle="dropdown"
+                    aria-haspopup="true"
                     aria-expanded="false">
                 Menu
             </button>
             <div class="dropdown-menu bg-secondary">
-                <button type="button" class="dropdown-item text-success" data-toggle="modal" data-target="#CharaterModalCenter">
-                    Change Character
+                <button type="button" class="dropdown-item text-success" data-toggle="modal"
+                        data-target="#ViewModalCenter">
+                    View Participants
                 </button>
-                <button type="button" class="dropdown-item text-warning" data-toggle="modal" data-target="#RestoreModalCenter">
+                <button type="button" class="dropdown-item text-warning" data-toggle="modal"
+                        data-target="#RestoreModalCenter">
                     Restore Default Chat
                 </button>
             </div>
         </div>
     </div>
 
-    <!-- Person Modal -->
-    <div class="modal fade" id="CharaterModalCenter" tabindex="-1" role="dialog"
-         aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+    <!-- View Participants Modal -->
+    <div class="modal fade" id="ViewModalCenter" tabindex="-1" role="dialog"
+         aria-labelledby="ViewModalCenterTitle" aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered" role="document">
             <div class="modal-content bg-dark">
                 <div class="modal-header">
-                    <h5 class="modal-title" id="PersonModalLongTitle">Change Character</h5>
+                    <h5 class="modal-title" id="ViewModalLongTitle">View Participants</h5>
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                        <span id="characters" aria-hidden="true"></span>
+                        <span aria-hidden="true" class="text-white">&times;</span>
                     </button>
                 </div>
                 <div class="modal-body">
                     <div class="_container" style="flex-wrap: wrap">
-                        <div class="item card">
-                            <img class="card-img-top _change_character" src="photo/jack.jpeg" alt="JACK">
-                            <div class="card-body bg-dark text-center">
-                                <button class="btn btn-success">JACK</button>
-                            </div>
+                        <div class="item border rounded">
+                            <img class="_change_character" src="photo/jack.jpeg" alt="JACK">
+                            <div>JACK</div>
                         </div>
-                        <div class="item card">
-                            <img class="card-img-top _change_character" src="photo/rose.jpeg" alt="JACK">
-                            <div class="card-body bg-dark text-center">
-                                <button class="btn btn-success">ROSE</button>
-                            </div>
+                        <div class="item border rounded">
+                            <img class="_change_character" src="photo/rose.jpeg" alt="ROSE">
+                            <div>ROSE</div>
                         </div>
-                        <div class="item card">
-                            <img class="card-img-top _change_character" src="photo/cal.jpeg" alt="JACK">
-                            <div class="card-body bg-dark text-center">
-                                <button class="btn btn-success">CAL</button>
-                            </div>
+                        <div class="item border rounded">
+                            <img class="_change_character" src="photo/cal.jpeg" alt="CAL">
+                            <div>CAL</div>
                         </div>
-                        <div class="item card">
-                            <img class="card-img-top _change_character" src="photo/ruth.jpeg" alt="JACK">
-                            <div class="card-body bg-dark text-center">
-                                <button class="btn btn-success">RUTH</button>
-                            </div>
+                        <div class="item border rounded">
+                            <img class="_change_character" src="photo/ruth.jpeg" alt="RUTH">
+                            <div>RUTH</div>
                         </div>
-                        <div class="item card">
-                            <img class="card-img-top _change_character" src="photo/andrews.jpeg" alt="JACK">
-                            <div class="card-body bg-dark text-center">
-                                <button class="btn btn-success">ANDREWS</button>
-                            </div>
+                        <div class="item border rounded">
+                            <img class="_change_character" src="photo/andrews.jpeg" alt="ANDREWS">
+                            <div>ANDREWS</div>
                         </div>
-                        <div class="item card">
-                            <img class="card-img-top _change_character" src="photo/gracie.jpeg" alt="JACK">
-                            <div class="card-body bg-dark text-center">
-                                <button class="btn btn-success">GRACIE</button>
-                            </div>
+                        <div class="item border rounded">
+                            <img class="_change_character" src="photo/gracie.jpeg" alt="GRACIE">
+                            <div>GRACIE</div>
                         </div>
-                        <div class="item card">
-                            <img class="card-img-top _change_character" src="photo/guggenheim.jpeg" alt="JACK">
-                            <div class="card-body bg-dark text-center">
-                                <button class="btn btn-success">GUGGENHEIM</button>
-                            </div>
+                        <div class="item border rounded">
+                            <img class="_change_character" src="photo/guggenheim.jpeg" alt="GUGGENHEIM">
+                            <div>GUGGENHEIM</div>
                         </div>
-                        <div class="item card">
-                            <img class="card-img-top _change_character" src="photo/ismay.jpeg" alt="JACK">
-                            <div class="card-body bg-dark text-center">
-                                <button class="btn btn-success">ISMAY</button>
-                            </div>
+                        <div class="item border rounded">
+                            <img class="_change_character" src="photo/ismay.jpeg" alt="ISMAY">
+                            <div>ISMAY</div>
                         </div>
-                        <div class="item card">
-                            <img class="card-img-top _change_character" src="photo/molly.jpeg" alt="JACK">
-                            <div class="card-body bg-dark text-center">
-                                <button class="btn btn-success">MOLLY</button>
-                            </div>
+                        <div class="item border rounded">
+                            <img class="_change_character" src="photo/molly.jpeg" alt="MOLLY">
+                            <div>MOLLY</div>
                         </div>
-                        <div class="item card">
-                            <img class="card-img-top _change_character" src="photo/waiter.jpeg" alt="JACK">
-                            <div class="card-body bg-dark text-center">
-                                <button class="btn btn-success">WAITER</button>
-                            </div>
+                        <div class="item border rounded">
+                            <img class="_change_character" src="photo/waiter.jpeg" alt="WAITER">
+                            <div>WAITER</div>
                         </div>
                     </div>
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                    <button type="button" class="btn btn-primary">Save changes</button>
                 </div>
             </div>
         </div>
     </div>
 
-    <!-- Restore Modal -->
+    <!-- Restore Default Chat Modal -->
     <div class="modal fade " id="RestoreModalCenter" tabindex="-1" role="dialog"
          aria-labelledby="RestoreModalCenterTitle" aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered" role="document">
@@ -148,7 +129,7 @@ socket.on('refreshScreen', () => {
                 <div class="modal-header">
                     <h5 class="modal-title" id="RestoreModalCenterTitle">Restore Default Chat</h5>
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                        <span aria-hidden="true">&times;</span>
+                        <span aria-hidden="true" class="text-white">&times;</span>
                     </button>
                 </div>
                 <div class="modal-body">
@@ -169,53 +150,14 @@ socket.on('refreshScreen', () => {
         <div id="messages" class="row"></div>
     </div>
 </main>
-<!--<footer class="row bg-secondary align-items-center p-2 m-1" id="footer">
-    <div class="dropdown">
-        <button class="btn btn-secondary dropdown-toggle bg-dark" id="name" type="button" data-toggle="dropdown"
-                aria-haspopup="true" aria-expanded="false">
-            NAME
-        </button>
-        <div class="dropdown-menu bg-dark text-white" aria-labelledby="name" id="names">
-            <a class="dropdown-item">JACK</a>
-            <a class="dropdown-item">ROSE</a>
-            <a class="dropdown-item">CAL</a>
-            <a class="dropdown-item">MOLLY</a>
-            <a class="dropdown-item">ISMAY</a>
-            <a class="dropdown-item">ANDREWS</a>
-            <a class="dropdown-item">GRACIE</a>
-            <a class="dropdown-item">GUGGENHEIM</a>
-            <a class="dropdown-item">WAITER</a>
-        </div>
-    </div>
-    <textarea id="message" class="form-control bg-dark text-white m-2 col"
-              placeholder="Message"></textarea>
-    <button id="send" class="btn btn-success">
-        <svg width="2em" height="2em" viewBox="0 0 16 16" class="bi bi-arrow-up" fill="currentColor"
-             xmlns="http://www.w3.org/2000/svg">
-            <path fill-rule="evenodd" d="M8 3.5a.5.5 0 0 1 .5.5v9a.5.5 0 0 1-1 0V4a.5.5 0 0 1 .5-.5z"/>
-            <path fill-rule="evenodd"
-                  d="M7.646 2.646a.5.5 0 0 1 .708 0l3 3a.5.5 0 0 1-.708.708L8 3.707 5.354 6.354a.5.5 0 1 1-.708-.708l3-3z"/>
-        </svg>
-    </button>
-
-    <button id="reset" class="btn btn-danger m-2">
-        <svg width="2em" height="2em" viewBox="0 0 16 16" class="bi bi-arrow-counterclockwise" fill="currentColor"
-             xmlns="http://www.w3.org/2000/svg">
-            <path fill-rule="evenodd"
-                  d="M12.83 6.706a5 5 0 0 0-7.103-3.16.5.5 0 1 1-.454-.892A6 6 0 1 1 2.545 5.5a.5.5 0 1 1 .91.417 5 5 0 1 0 9.375.789z"/>
-            <path fill-rule="evenodd"
-                  d="M7.854.146a.5.5 0 0 0-.708 0l-2.5 2.5a.5.5 0 0 0 0 .708l2.5 2.5a.5.5 0 1 0 .708-.708L5.707 3 7.854.854a.5.5 0 0 0 0-.708z"/>
-        </svg>
-    </button>
-</footer>-->
 <footer class="bg-secondary" id="footer">
     <div class="_container">
-        <div class="dropdown item">
+        <div class="dropdown item ">
             <button class="btn btn-secondary dropdown-toggle bg-dark" id="name" type="button" data-toggle="dropdown"
                     aria-haspopup="true" aria-expanded="false">
                 NAME
             </button>
-            <div class="dropdown-menu bg-dark text-white" aria-labelledby="name" id="names">
+            <div class="dropdown-menu bg-secondary text-white " aria-labelledby="name" id="names">
                 <a class="dropdown-item">JACK</a>
                 <a class="dropdown-item">ROSE</a>
                 <a class="dropdown-item">CAL</a>
