--- a/src/index.html
+++ b/src/index.html
@@ -164,8 +164,8 @@ socket.on('refreshScreen', () => {
                     </button>
                 </div>
                 <div class="modal-body">
-                    <p>The all comments on the screen are stored in online database server permanently. <br>
-                        Hence, if you want to reset the chatting then press the 'RESTORE' button.</p>
+                    <p>The all comments on the screen are stored in online database server permanently.</p>
+                    <p>If you want to restore the default chatting history then press the 'RESTORE' button.</p>
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
