--- a/src/index.html
+++ b/src/index.html
@@ -47,11 +47,11 @@ socket.on('refreshScreen', () => {
                 Menu
             </button>
             <div class="dropdown-menu bg-secondary">
-                <button type="button" class="dropdown-item text-info" data-toggle="modal"
+                <button type="button" class="dropdown-item text-white" data-toggle="modal"
                         data-target="#AboutModalCenter">
                     About
                 </button>
-                <button type="button" class="dropdown-item text-success" data-toggle="modal"
+                <button type="button" class="dropdown-item text-white" data-toggle="modal"
                         data-target="#ViewModalCenter">
                     View Participants
                 </button>
@@ -81,7 +81,9 @@ socket.on('refreshScreen', () => {
                     </div>
                     <p>You can select a person and chat with people from my favourite movie.</p>
                     <p>Multiple users can access this application and talk to each other in realtime.</p>
-                    <p>I hope you enjoy this!</p>
+                    <p>I hope you enjoy this!</p><br>
+                    <p>Developer: Jaeyoung Kim (jaeyoung.kim.dev@gmail.com)</p>
+                    <p class="font-italic">HTML5, CSS3, JavaScript, Node.JS, Express.JS, Socket.IO, jQuery and Bootstrap</p>
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
