Deploying on Heroku

--- a/src/index.html
+++ b/src/index.html
@@ -35,7 +35,7 @@ socket.on('refreshScreen', () => {
 })
 </script>
 
-<html>
+<html lang="en">
 <body class="bg-dark" style="color: white;">
 <header class="justify-content-center m-1 ">
     <div class="_container">
@@ -83,7 +83,7 @@ socket.on('refreshScreen', () => {
                     <p>Multiple users can access this application and talk to each other in realtime.</p>
                     <p>I hope you enjoy this!</p><br>
                     <p>Developer: Jaeyoung Kim (jaeyoung.kim.dev@gmail.com)</p>
-                    <p class="font-italic">HTML5, CSS3, JavaScript, Node.JS, Express.JS, Socket.IO, jQuery and Bootstrap</p>
+                    <p class="font-italic">HTML5, CSS3, JavaScript, Node.JS, Express, Socket.IO, jQuery and Bootstrap</p>
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
@@ -185,7 +185,7 @@ socket.on('refreshScreen', () => {
 </main>
 <footer class="bg-secondary" id="footer">
     <div class="_container">
-        <div class="dropdown item ">
+        <div class="dropdown item">
             <button class="btn btn-secondary dropdown-toggle bg-dark" id="name" type="button" data-toggle="dropdown"
                     aria-haspopup="true" aria-expanded="false">
                 NAME
@@ -205,7 +205,7 @@ socket.on('refreshScreen', () => {
 
         <div class="item item-grow">
             <input type="text" id="message" class=" form-control bg-dark text-white"
-                   placeholder="Message"/>
+                                                placeholder="Message"/>
         </div>
 
         <button id="send" class="item btn btn-success p-1 m-1">
