--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 
 <script type="text/javascript"
         src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script> <!--to use jQuery for messages.js-->
-<script type="text/javascript" src="./messages.js"></script>
+<script type="text/javascript" src="messages.js"></script>
 
 <link rel="stylesheet" href="style.css">
 
@@ -176,13 +176,14 @@ socket.on('refreshScreen', () => {
             </div>
         </div>
     </div>
-
 </header>
+
 <main class="m-2" id="main">
     <div class="container-fluid">
         <div id="messages" class="row"></div>
     </div>
 </main>
+
 <footer class="bg-secondary" id="footer">
     <div class="_container">
         <div class="dropdown item">
