Updated about page

--- a/src/index.html
+++ b/src/index.html
@@ -82,7 +82,7 @@ socket.on('refreshScreen', () => {
                     <p>You can select a person and chat with people from my favourite movie.</p>
                     <p>Multiple users can access this application and talk to each other in realtime.</p>
                     <p>I hope you enjoy this!</p><br>
-                    <p>Developer: Jaeyoung Kim (jaeyoung.kim.dev@gmail.com)</p>
+                    <p>Developer: <a href="https://jaeyoungkim.codes/">Jaeyoung Kim</a></p>
                     <p class="font-italic">HTML5, CSS3, JavaScript, Node.JS, Express, Socket.IO, jQuery and Bootstrap</p>
                 </div>
                 <div class="modal-footer">
