--- a/src/index.html
+++ b/src/index.html
@@ -57,7 +57,7 @@ socket.on('refreshScreen', () => {
                 </button>
                 <button type="button" class="dropdown-item text-warning" data-toggle="modal"
                         data-target="#RestoreModalCenter">
-                    Restore Default Chat
+                    Restore Default Chata
                 </button>
             </div>
         </div>
